src/snapshots/spyglys__parser__test__lexing_multiple_keywords.snap
---
source: src/parser.rs
expression: "Lexer::new(\"let\n\n    def   \n\n            end   let   def end defendletdef\").tokenize()"
---
[
    Spanned {
        start: 0,
        end: 3,
        contents: Let,
    },
    Spanned {
        start: 3,
        end: 4,
        contents: NewLine,
    },
    Spanned {
        start: 4,
        end: 5,
        contents: NewLine,
    },
    Spanned {
        start: 9,
        end: 12,
        contents: Def,
    },
    Spanned {
        start: 15,
        end: 16,
        contents: NewLine,
    },
    Spanned {
        start: 16,
        end: 17,
        contents: NewLine,
    },
    Spanned {
        start: 29,
        end: 32,
        contents: End,
    },
    Spanned {
        start: 35,
        end: 38,
        contents: Let,
    },
    Spanned {
        start: 41,
        end: 44,
        contents: Def,
    },
    Spanned {
        start: 45,
        end: 48,
        contents: End,
    },
    Spanned {
        start: 49,
        end: 61,
        contents: Ident(
            "defendletdef",
        ),
    },
    Spanned {
        start: 61,
        end: 61,
        contents: Eof,
    },
]
